Work around to display img-responsive correctly on firefox

--- a/packages/clay/src/scss/_custom.scss
+++ b/packages/clay/src/scss/_custom.scss
@@ -647,7 +647,7 @@
 	}
 }
 
-.timeline-x-axis {
+.timeline-y-axis {
 	background-color: #999;
 	bottom: 0;
 	content: " ";
